@@ -15,8 +15,8 @@ gv/doc/version.texi.deps
 gv/GV
 gv/INSTALL
 gv/install-sh
-gv/lib/dummy.o
-gv/lib/libgnu.a
+gv/lib/*.a
+gv/lib/*.o
 gv/missing
 gv/src/ac_config.h
 gv/src/ac_config.h.in
@@ -36,20 +36,18 @@ gv/src/*.o
 gv/src/stamp-h1
 Makefile
 Makefile.in
+gv/compile
 gv/config.guess
 gv/config.sub
 gv/lib/signal.h
 gv/lib/alloca.h
 gv/lib/arg-nonnull.h
 gv/lib/c++defs.h
+gv/lib/fcntl.h
 gv/lib/getopt.h
-gv/lib/getopt.o
-gv/lib/getopt1.o
 gv/lib/inttypes.h
-gv/lib/malloca.o
 gv/lib/stdlib.h
 gv/lib/sys/
-gv/lib/tempname.o
 gv/lib/time.h
 gv/lib/unistd.h
 gv/lib/warn-on-use.h
