@@ -9,6 +9,15 @@ by a '#' or a '*' or a '?'. A
   '#' denotes a change which is noticeable by the user.
   '?' describes a known problem which is not fixed yet.
 
+%%%%%%%%%%%%%%%%%%% GV 3.7.4 (March 2022) %%%%%%%%%%%%%%%%%%%%%%%%%%
+
+# Add -dDELAYSAFER to GV.gsCmdScanPDF for gs 9.56.
+# Change -sDEVICE=pswrite to -sDEVICE=ps2write in GV.gsCmdConvPDF for gs 9.
+# Set LC_ALL=C if it is unset to fix "Missing charsets in String to FontSet conversion" warnings.
+# Fix a bug where very long environment variables could crash gv.
+# Use make -j in scripts/makedist.sh.
+# Update .gitignore.
+
 %%%%%%%%%%%%%%%%%%% GV 3.7.4 (April 2021) %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 # Change the digit '9' function to rotate 90 degrees clockwise.
